--- a/css/main.css
+++ b/css/main.css
@@ -58,9 +58,13 @@ a:visited { color: #a0a; }
 .site {
   font-size: 115%;
   text-align: justify;
-  width: 42em;
+  /* width: 42em; */
   margin: 3em auto 2em;
   line-height: 1.5em;
+  padding-left: 5px;
+  padding-right: 5px;
+  min-width: 320px;
+  max-width: 42em;
 }
 
 .header a {
