Adding in bitters scss

--- a/scss/aa.scss
+++ b/scss/aa.scss
@@ -1,6 +1,7 @@
 // Import frameworks
 @import "vendor/bourbon/bourbon";
 @import "vendor/neat/neat";
+@import "vendor/bitters/base";
 
 // Import configuration
 @import "config/base-config";
