--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
         {% include footer.html %}
 
-        <!-- Google Analytics
+        <!-- Google Analytics -->
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -26,6 +26,5 @@
             ga('create', 'UA-29795392-1', 'aaronallport.com');
             ga('send', 'pageview');
         </script>
-        -->
     </body>
 </html>
