--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Virtual home of Aaron Allport, a Web Developer from Colchester, UK." />
 
     <!-- FONTS -->
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/aa.min.css" />
