--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,10 +1,10 @@
 // Typography
-$sans-serif: "Roboto", $helvetica;
+$sans-serif: "Open Sans", $helvetica;
 $serif: $georgia;
 $base-font-family: $sans-serif;
 $header-font-family: $base-font-family;
 $base-font-weight: 400;
-$heading-font-weight: 700;
+$heading-font-weight: 600;
 
 // Sizes
 $base-font-size: 1em;
