--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,7 +1,7 @@
 <aside>
     <p>
-        Hi, I'm Aaron Allport. I am a <b>web developer</b> and <b>technical evangelist</b> for
-        <a href="//thomsonreuters.com">Thomson Reuters</a>. I contribute to several open-source
+        Hi, I'm Aaron Allport. I am a Consultant at 
+        <a href="//slalom.com">Slalom</a>. I contribute to several open-source
         projects on <a href="//github.com/aaronallport">GitHub</a>.
         You can follow me on <a href="//twitter.com/aaronallport">Twitter</a>.
     </p>
