Update aside info

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,6 +1,6 @@
 <aside>
     <p>
-        Hi, I'm Aaron Allport. I am a Consultant at 
+        Hi, I'm Aaron Allport. I am a Salesforce Solution Principal at 
         <a href="//slalom.com">Slalom</a>. I contribute to several open-source
         projects on <a href="//github.com/aaronallport">GitHub</a>.
         You can follow me on <a href="//twitter.com/aaronallport">Twitter</a>.
