--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,16 +2,31 @@
     <meta charset="utf-8" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width, minimum-scasle=1.0" />
-    <meta name="apple-mobile-web-app-title" content="aaronallport.com" />
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0" />
 
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }} &ndash; Aaron Allport: Salesforce Solution Principal</title>
 
-    <meta name="description" content="Virtual home of Aaron Allport, a Web Developer from Colchester, UK." />
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@aaronallport">
+    <meta name="twitter:domain" content="aaronallport.com">
+    <meta name="twitter:creator" content="@aaronallport">
+    <meta name="twitter:title" content="{{ page.title }} – Aaron Allport">
+    <meta name="twitter:image" content="https://aaronallport.com/logo.png">
+    <!-- TODO -->{% if page.meta %}
+        <!-- TODO <meta name="twitter:description" content="{{ page.meta }}"> -->
+    <!-- TODO -->{% endif %}
 
     <!-- FONTS -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet" type="text/css">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/aa.min.css" />
+    <link rel="stylesheet" href="/css/aa.css" />
+
+    <!-- TODO <link rel="shortcut icon" href="/icon.png"> -->
+    <!-- TODO <link rel="apple-touch-icon-precomposed" href="/icon.png"> -->
+    <meta name="apple-mobile-web-app-title" content="aaronallport" />
+    <meta name="description" content="Virtual home of Aaron Allport, Salesforce Solution Principal from Colchester, UK." />
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
+    <meta name="theme-color" content="#008080" />
+    <!-- TODO <link rel="manifest" href="/manifest.json"> -->
 </head>
