Updates to banner styling and added my photo

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,4 +1,7 @@
 <aside>
+    <div class="image-placeholder">
+        <img class="image-placeholder__me" src="/images/me.jpg" title="Yours truly" alt="Image of Aaron Allport" />
+    </div>
     <p>
         Hi, I'm Aaron Allport. I am a Salesforce Solution Principal at
         <a href="//slalom.com">Slalom</a>. I contribute to several open-source
