--- a/scss/custom-styles/_colour.scss
+++ b/scss/custom-styles/_colour.scss
@@ -2,6 +2,10 @@
 // Colour
 //
 
+header {
+    border-bottom: 1px solid $light-gray;
+}
+
 footer {
     background-color: $dark-gray;
     color: $light-gray;
