Minor stylistic changes, remove custom fonts

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -3,12 +3,9 @@
         <img class="image-placeholder__me" src="/images/me.jpg" title="Yours truly" alt="Image of Aaron Allport" />
     </div>
     <p>
-        Hi, I'm Aaron Allport. I am a Salesforce Solution Principal at
+        Hi, I'm Aaron Allport. I am a Salesforce Architect at
         <a href="//slalom.com">Slalom</a>. I contribute to several open-source
         projects on <a href="//github.com/aaronallport">GitHub</a>.
         You can follow me on <a href="//twitter.com/aaronallport">Twitter</a>.
-    </p>
-    <p>
-        My beloved site is in a state of flux whilst I settle on a new design.
     </p>
 </aside>
