--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, minimum-scale=1.0" />
 
-    <title>{{ page.title }} &ndash; Aaron Allport: Salesforce Solution Principal</title>
+    <title>{{ page.title }} &ndash; Aaron Allport: Salesforce Architect</title>
 
     <!-- TODO <meta name="twitter:card" content="summary"> -->
     <!-- TODO <meta name="twitter:site" content="@aaronallport"> -->
@@ -18,8 +18,8 @@
 
     <!-- TODO <link rel="shortcut icon" href="/icon.png"> -->
     <!-- TODO <link rel="apple-touch-icon-precomposed" href="/icon.png"> -->
-    <!-- TODO <meta name="apple-mobile-web-app-title" content="aaronallport" /> -->
-    <meta name="description" content="Virtual home of Aaron Allport, Salesforce Solution Principal from Colchester, UK." />
+    <meta name="apple-mobile-web-app-title" content="aaronallport.com" />
+    <meta name="description" content="Virtual home of Aaron Allport, Salesforce Architect from Colchester, UK." />
     <!-- TODO <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" /> -->
     <!-- TODO <meta name="theme-color" content="#008080" /> -->
     <!-- TODO <link rel="manifest" href="/manifest.json"> -->
